creusot/tests/should_fail/prusti/blocked_lifetime/simple.stderr
error: invalid mut dereference of zombie expression with lifetime `'_` in state `'post`
 --> simple.rs:4:12
  |
4 | #[ensures(*x == 0u32)]
  |            ^

error: aborting due to 1 previous error

